--- a/src/components/movies/Styles.css
+++ b/src/components/movies/Styles.css
@@ -1,8 +1,20 @@
 .movie__p {
   font-family: 'Source Sans Pro', sans-serif;
+  color: #000;
 }
 .movie__date {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 200;
   margin-top: -14px;
+}
+@media only screen and (min-width: 768px) { 
+ .mobie-desk {
+   display: none;
+ }
+}
+
+@media only screen and (max-width: 767px) { 
+  .mobie-mobile {
+    display: none;
+  }
 }
