--- a/src/components/searchBox/SearchInput.css
+++ b/src/components/searchBox/SearchInput.css
@@ -6,12 +6,7 @@
   -o-border-radius: 0px !important;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
-  background-image: linear-gradient(
-      to bottom,
-      rgba(16, 153, 255, 0.7),
-      rgba(179, 225, 255, 0.164)
-    ),
-    url('../../images/Nobody.jpg');
+  
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -21,4 +16,80 @@
   font-size: 42px;
   font-weight: bold;
   line-height: 42px;
+}
+
+.search-form {
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  padding: 21px 20px;
+}
+
+.search-form-mobile {
+  border-radius: 20px !important;
+  -webkit-border-radius: 20px !important;
+  -moz-border-radius: 20px !important;
+  -ms-border-radius: 20px !important;
+  -o-border-radius: 20px !important;
+  padding: 21px 20px;
+}
+
+@media only screen and (min-width: 768px) {
+  .mobile-input {
+    display: none;
+  }
+}
+.search-btn {
+  border-radius: 22px;
+  padding: 10px 20px;
+  z-index: 9999999999999999;
+  position: absolute;
+  left: 95%;
+  font-weight: 900;
+  margin-left: -13px;
+  top: -45px;
+  -webkit-border-radius: 22px;
+  -moz-border-radius: 22px;
+  -ms-border-radius: 22px;
+  -o-border-radius: 22px;
+}
+
+@media only screen and (max-width: 767px) {
+
+  .jumbotron {
+    margin: 0px -15px !important;
+    width: 360px !important;
+    overflow-x: hidden !important;
+  }
+
+  .desktop-input {
+    display: none;
+  }
+
+  .search-form-mobile {
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+  .search-btn {
+    margin-left: -70px !important;
+    padding: 9px 20px;
+    top: -44px;
+  }
+
+ 
+
+  .jumbotron h1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .mobile-form {
+    margin-top: 90px !important;
+  }
 }
