--- a/src/components/videoSlider/styles.css
+++ b/src/components/videoSlider/styles.css
@@ -1,22 +1,19 @@
 
-.section__video {
-    background-color: #130f40;
-    background-image: linear-gradient(315deg, #130f40 0%, #000000 74%);
-    color: #fff;
-    padding-top: 10px;
-    margin-left: 10px !important;
-}
-
-
-.movie__p {
+.movie__p-2 {
   font-family: 'Source Sans Pro', sans-serif;
-  color: #000;
+  color: #000 !important;
+  text-decoration: none !important;
+  margin-bottom: 10rem !important;
 } 
+
+
 .movie__date {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 200;
-  margin-top: -14px;
+  margin-top: -5px !important;
 }
+
+
 @media only screen and (min-width: 768px) { 
  .mobie-desk {
    display: none;
